# wechat-automation-local

./: .gitattributes  .gitignore  AGENTS.md  DELIVERY_MANIFEST.json  DELIVERY_MANIFEST.md  DELIVERY_WECHAT_DBKEY_HOOK.md  DEPLOY.md  LICENSE  README.md  README_CN.md  pyproject.toml  pytest.ini  run_wechat_hook_pipeline_check.py  wechat_dbkey_hook_install_skeleton.cpp  wechat_dbkey_hook_skeleton.cpp  wechat_hook_output_adapter.py  wechat_hook_protocol.md  wechat_key_candidate_validator.py  wechat_ui_automation.py
.codebase-memory/: artifact.json  graph.db.zst
docs/: 2026-06-12-cua-separate-window-design.md  2026-07-11-reliable-pipeline-refactor.md  2026-07-12-reliable-pipeline-execution-plan.md  2026-07-19-stage5-plan.md  agent-provider-job-queue.md  current_status_2026-04-28.md
plan_wechat_auto/: plan.md
plan_wechat_listener_sender_opt/: plan.md
plan_wechat_native_bridge/: context.json  exploration_findings.md  input.txt  output.txt
plan_wechat_raw_incremental/: exploration_findings.md  plan.md  s1_baseline.txt
plan_wechat_raw_incremental_explore/: input.txt  output.txt
plan_wechat_reply_llm/: plan.md
source_read/: docs_part2_chapter10_index.md  docs_part2_chapter11_index.md  docs_part2_chapter12_index.md  docs_part2_chapter13_index.md  docs_part2_chapter7_index.md  docs_part2_chapter8_index.md  docs_part2_chapter9_index.md  llmcore.py  sys_prompt.txt
wechat-decrypt/: .gitignore  README.md  USAGE.md  admin_commands.py  admin_extract_and_decrypt.py  admin_probe_salts.py  agent_jobs.py  agent_provider.py  agent_worker.py  config.example.json  config.py  (+46 more)
(+112 files in other folders)
